--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
       <!-- CARD 1 -->
       <div data-aos="fade-up-left" class="card">
         <div class="image">
-          <video class="floating" controls muted loop poster="/videos/bvideo01.png">
+          <video class="floating" controls loop poster="/videos/bvideo01.png">
              <source src="/videos/video01.mp4" type="video/mp4" />
             Seu navegador não suporta vídeos HTML5.
           </video>
@@ -198,7 +198,7 @@
       <!-- CARD 2 -->
       <div data-aos="fade-up-right" class="card">
         <div class="image">
-          <video class="floating" controls muted loop poster="/videos/bvideo02.png">
+          <video class="floating" controls loop poster="/videos/bvideo02.png">
             <source src="https://pub-964fe2e2f25d4c03ae6753ee4f5d1436.r2.dev/video002.mp4" type="video/mp4" />
             Seu navegador não suporta vídeos HTML5.
           </video>
@@ -215,7 +215,7 @@
       <!-- CARD 3 -->
       <div data-aos="fade-up-left" class="card">
         <div class="image">
-          <video class="floating" controls muted loop poster="/videos/bvideo03.png">
+          <video class="floating" controls loop poster="/videos/bvideo03.png">
             <source src="/videos/video03.mp4" type="video/mp4" />
             Seu navegador não suporta vídeos HTML5.
           </video>
@@ -228,7 +228,7 @@
       </div>
       <div data-aos="fade-up-left" class="card">
         <div class="image">
-          <video class="floating" controls muted loop poster="/videos/bvideo04.png">
+          <video class="floating" controls loop poster="/videos/bvideo04.png">
             <source src="https://pub-964fe2e2f25d4c03ae6753ee4f5d1436.r2.dev/Video005.mp4" type="video/mp4" />
             Seu navegador não suporta vídeos HTML5.
           </video>
@@ -241,7 +241,7 @@
       </div>
       <div data-aos="fade-up-left" class="card">
         <div class="image">
-          <video class="floating" controls muted loop poster="/videos/bvideo05.png">
+          <video class="floating" controls loop poster="/videos/bvideo05.png">
             <source src="https://pub-964fe2e2f25d4c03ae6753ee4f5d1436.r2.dev/video004.mp4" type="video/mp4" />
             Seu navegador não suporta vídeos HTML5.
           </video>
@@ -258,7 +258,7 @@
       <!-- CARD 4 -->
       <div data-aos="fade-up-right" class="card">
         <div class="image">
-          <video class="floating" controls muted loop poster="/videos/bvideo06.png">
+          <video class="floating" controls loop poster="/videos/bvideo06.png">
             <source src="https://pub-964fe2e2f25d4c03ae6753ee4f5d1436.r2.dev/Video006.mp4" type="video/mp4" />
             Seu navegador não suporta vídeos HTML5.
           </video>
@@ -274,7 +274,7 @@
       </div>
       <div data-aos="fade-up-right" class="card">
         <div class="image">
-          <video class="floating" controls muted loop poster="/videos/bvideo07.png">
+          <video class="floating" controls loop poster="/videos/bvideo07.png">
             <source src="/videos/video07.mp4" type="video/mp4" />
             Seu navegador não suporta vídeos HTML5.
           </video>
@@ -289,7 +289,7 @@
       </div>
       <div data-aos="fade-up-right" class="card">
         <div class="image">
-          <video class="floating" controls muted loop poster="/videos/bvideo08.png">
+          <video class="floating" controls loop poster="/videos/bvideo08.png">
             <source src="/videos/video08.mp4" type="video/mp4" />
             Seu navegador não suporta vídeos HTML5.
           </video>
@@ -681,4 +681,3 @@
     </script>
   </body>
 </html>
-
