--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
       <div data-aos="fade-up-left" class="card">
         <div class="image">
           <video class="floating" controls loop poster="/videos/bvideo01.png">
-             <source src="/videos/video01.mp4" type="video/mp4" />
+             <source src="/videos/Video001.mp4" type="video/mp4" />
             Seu navegador não suporta vídeos HTML5.
           </video>
         </div>
@@ -199,7 +199,7 @@
       <div data-aos="fade-up-right" class="card">
         <div class="image">
           <video class="floating" controls loop poster="/videos/bvideo02.png">
-            <source src="https://pub-964fe2e2f25d4c03ae6753ee4f5d1436.r2.dev/video002.mp4" type="video/mp4" />
+            <source src="/videos/Video002.mp4" type="video/mp4" />
             Seu navegador não suporta vídeos HTML5.
           </video>
         </div>
@@ -216,7 +216,7 @@
       <div data-aos="fade-up-left" class="card">
         <div class="image">
           <video class="floating" controls loop poster="/videos/bvideo03.png">
-            <source src="/videos/video03.mp4" type="video/mp4" />
+            <source src="/videos/Video003.mp4" type="video/mp4" />
             Seu navegador não suporta vídeos HTML5.
           </video>
         </div>
@@ -229,7 +229,7 @@
       <div data-aos="fade-up-left" class="card">
         <div class="image">
           <video class="floating" controls loop poster="/videos/bvideo04.png">
-            <source src="https://pub-964fe2e2f25d4c03ae6753ee4f5d1436.r2.dev/Video005.mp4" type="video/mp4" />
+            <source src="/videos/Video005.mp4" type="video/mp4" />
             Seu navegador não suporta vídeos HTML5.
           </video>
         </div>
@@ -242,7 +242,7 @@
       <div data-aos="fade-up-left" class="card">
         <div class="image">
           <video class="floating" controls loop poster="/videos/bvideo05.png">
-            <source src="https://pub-964fe2e2f25d4c03ae6753ee4f5d1436.r2.dev/video004.mp4" type="video/mp4" />
+            <source src="/videos/Video004.mp4" type="video/mp4" />
             Seu navegador não suporta vídeos HTML5.
           </video>
         </div>
@@ -259,7 +259,7 @@
       <div data-aos="fade-up-right" class="card">
         <div class="image">
           <video class="floating" controls loop poster="/videos/bvideo06.png">
-            <source src="https://pub-964fe2e2f25d4c03ae6753ee4f5d1436.r2.dev/Video006.mp4" type="video/mp4" />
+            <source src="/videos/Video006.mp4" type="video/mp4" />
             Seu navegador não suporta vídeos HTML5.
           </video>
         </div>
@@ -275,7 +275,7 @@
       <div data-aos="fade-up-right" class="card">
         <div class="image">
           <video class="floating" controls loop poster="/videos/bvideo07.png">
-            <source src="/videos/video07.mp4" type="video/mp4" />
+            <source src="/videos/Video007.mp4" type="video/mp4" />
             Seu navegador não suporta vídeos HTML5.
           </video>
         </div>
@@ -290,7 +290,7 @@
       <div data-aos="fade-up-right" class="card">
         <div class="image">
           <video class="floating" controls loop poster="/videos/bvideo08.png">
-            <source src="/videos/video08.mp4" type="video/mp4" />
+            <source src="/videos/Video008.mp4" type="video/mp4" />
             Seu navegador não suporta vídeos HTML5.
           </video>
         </div>
