--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <meta property="og:title" content="Lottin Films - Portfólio" />
     <meta
       property="og:description"
-      content="Confira alguns projetos desenvolvidos por mim"
+      content="Confira meus melhores trabalhos!"
     />
     <meta
       property="og:image"
@@ -52,7 +52,7 @@
     <meta property="twitter:title" content="Lottin Films - Portfólio" />
     <meta
       property="twitter:description"
-      content="Confira alguns projetos desenvolvidos por mim"
+      content="Confira meus melhores trabalhos!"
     />
     <meta
       property="twitter:image"
