--- a/index.html
+++ b/index.html
@@ -1,87 +1,69 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
-      rel="stylesheet"
-    />
+  <!-- Charset e viewport devem vir sempre primeiro -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta
-      name="google-site-verification"
-      content="Rvr9ywhTxusq5m0WFMveeK9eRorR3HfAqGN5JjaawRI"
-    />
+  <!-- SEO básico -->
+  <title>Filmmaker e editor em Anápolis, Goiânia, Brasília e Região – Lottin Films | Vídeos Profissionais e Criativos</title>
+  <meta name="description" content="Filmmaker em Anápolis, Goiânia, Brasília e Região. Especialista em vídeos automotivos, comerciais, casamentos e conteúdo para redes sociais. Portfólio completo.">
+  <meta name="keywords" content="filmmaker, filmmaker anapolis, filmmaker em anapolis, filmmaker goias, ... [cole a lista acima aqui]">
+  <meta name="author" content="Carlos Eduardo – Lottin Films" />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://lottinfilms.com.br/" />
 
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-    />
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Verificação do Google Search Console -->
+  <meta name="google-site-verification" content="Rvr9ywhTxusq5m0WFMveeK9eRorR3HfAqGN5JjaawRI" />
 
-    <!-- Primary Meta Tags -->
-    <title>Lottin Films - Portfolio</title>
-    <meta name="title" content="Lottin Films - Portfólio" />
-    <meta
-      name="description"
-      content="Confira meus melhores trabalhos!"
-    />
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta
-      property="og:url"
-      content="https://lottinfilms.com.br/"
-    />
-    <meta property="og:title" content="Lottin Films - Portfólio" />
-    <meta
-      property="og:description"
-      content="Confira meus melhores trabalhos!"
-    />
-    <meta
-      property="og:image"
-      content="https://lottin.films.com.br/imagens/fundo.png"
-    />
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta
-      property="twitter:url"
-      content="https://lottinfilms.com.br/"
-    />
-    <meta property="twitter:title" content="Lottin Films - Portfólio" />
-    <meta
-      property="twitter:description"
-      content="Confira meus melhores trabalhos!"
-    />
-    <meta
-      property="twitter:image"
-      content="https://lottin.films.com.br/imagens/fundo.png"
-    />
-    <!-- Meta Tags Generated with https://metatags.io -->
+  <!-- Open Graph (Facebook, WhatsApp) -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://lottinfilms.com.br/" />
+  <meta property="og:title" content="Lottin Films – Portfólio" />
+  <meta property="og:description" content="Portfólio de vídeos profissionais e criativos." />
+  <meta property="og:image" content="https://lottinfilms.com.br/imagens/fundo.png" />
 
-    <link rel="sitemap" type="application/xml" href="./sitemap.xml" />
-    <link rel="canonical" href="https://lottinfilms.com.br/" />
-    <meta name="robots" content="index, follow" />
-    <meta name="Author" content="Lottin Films" />
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:url" content="https://lottinfilms.com.br/" />
+  <meta name="twitter:title" content="Lottin Films – Portfólio" />
+  <meta name="twitter:description" content="Portfólio de vídeos profissionais e criativos." />
+  <meta name="twitter:image" content="https://lottinfilms.com.br/imagens/fundo.png" />
 
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/lenis@1.1.14/dist/lenis.css"
-    />
+  <!-- Favicon -->
+  <link rel="icon" href="./assets/logolottin.png" type="image/png" />
+  <link rel="shortcut icon" href="./assets/logolottin.png" type="image/png" />
 
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/navigation.css" />
-      <link rel="icon" href="./assets/foto gg icon.png" type="image/png" />
-<link rel="shortcut icon" href="./assets/foto gg icon.png" type="image/png" />
 
-    />
 
-    <script
-      src="https://kit.fontawesome.com/40e1b7901b.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100..900&family=Roboto+Mono:wght@100..700&display=swap" rel="stylesheet" />
+
+  <!-- Styles -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+  <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
+  <link rel="stylesheet" href="https://unpkg.com/lenis@1.1.14/dist/lenis.css" />
+  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="./css/navigation.css" />
+
+  <!-- Sitemap (se existir) -->
+  <link rel="sitemap" type="application/xml" href="./sitemap.xml" />
+
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/40e1b7901b.js" crossorigin="anonymous" defer></script>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "Lottin Films",
+  "url": "https://www.lottinfilms.com.br",
+  "logo": "https://lottinfilms.com.br/assets/logolottin.png"
+}
+</script>
+</head>
+
   <body>
     <div id="particles-js"></div>
 
