--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- SEO básico -->
-  <title>Filmmaker e editor em Anápolis, Goiânia, Brasília e Região – Lottin Films | Vídeos Profissionais e Criativos</title>
+  <title>Lottin Films | Portfólio</title>
   <meta name="description" content="Filmmaker em Anápolis, Goiânia, Brasília e Região. Especialista em vídeos automotivos, comerciais, casamentos e conteúdo para redes sociais. Portfólio completo.">
   <meta name="keywords" content="filmmaker, filmmaker anapolis, filmmaker em anapolis, filmmaker goias, ... [cole a lista acima aqui]">
   <meta name="author" content="Carlos Eduardo – Lottin Films" />
