--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
     <section id="sobre">
       <div class="wrapper">
         <div data-aos="fade-up-right" class="image">
-          <img src="./imagens/ImagemMinha.png" alt="Foto de Carlos" />
+          <img src="./imagens/ImagemMinha2.png" alt="Foto de Carlos" />
         </div>
         <div class="content">
           <header>
