--- a/index.html
+++ b/index.html
@@ -48,20 +48,8 @@
   <link rel="stylesheet" href="./css/style.css" />
   <link rel="stylesheet" href="./css/navigation.css" />
 
-  <!-- Sitemap (se existir) -->
-  <link rel="sitemap" type="application/xml" href="./sitemap.xml" />
 
   <!-- Font Awesome -->
-  <script src="https://kit.fontawesome.com/40e1b7901b.js" crossorigin="anonymous" defer></script>
-    <script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "Organization",
-  "name": "Lottin Films",
-  "url": "https://www.lottinfilms.com.br",
-  "logo": "https://lottinfilms.com.br/assets/logolottin.png"
-}
-</script>
 </head>
 
   <body>
@@ -84,7 +72,7 @@
           target="_blank"
           href="https://wa.me/5562986531443"
           >
-           <img src="/imagens/whatsapp.png" alt="LinkedIn" height="100" width="100" />
+           <img src="./imagens/whatsapp.png" alt="LinkedIn" height="100" width="100" />
 </a>
 
          <a
@@ -94,7 +82,7 @@
   target="_blank"
   href="https://www.instagram.com/lottin.films/"
 >
-  <img src="/imagens/insta.png" alt="LinkedIn" height="100" width="100" />
+  <img src="./imagens/insta.png" alt="LinkedIn" height="100" width="100" />
 </a>
 
 
@@ -126,7 +114,7 @@
                <div class="logo-container"
        data-aos="fade-up"
        data-aos-anchor-placement="bottom-bottom">
-    <img src="/imagens/sticker.png" alt="Lottin Films" class="logo-sticker">
+    <img src="./imagens/sticker.png" alt="Lottin Films" class="logo-sticker">
 
   </div>
 </div>
@@ -164,8 +152,8 @@
       <!-- CARD 1 -->
       <div data-aos="fade-up-left" class="card">
         <div class="image">
-          <video class="floating" controls loop poster="/videos/bvideo01.png">
-             <source src="/videos/Video001.mp4" type="video/mp4" />
+          <video class="floating" controls loop poster="./videos/bvideo01.png">
+             <source src="./videos/Video001.mp4" type="video/mp4" />
             Seu navegador não suporta vídeos HTML5.
           </video>
         </div>
@@ -180,8 +168,8 @@
       <!-- CARD 2 -->
       <div data-aos="fade-up-right" class="card">
         <div class="image">
-          <video class="floating" controls loop poster="/videos/bvideo02.png">
-            <source src="/videos/Video002.mp4" type="video/mp4" />
+          <video class="floating" controls loop poster="./videos/bvideo02.png">
+            <source src="./videos/Video002.mp4" type="video/mp4" />
             Seu navegador não suporta vídeos HTML5.
           </video>
         </div>
@@ -197,8 +185,8 @@
       <!-- CARD 3 -->
       <div data-aos="fade-up-left" class="card">
         <div class="image">
-          <video class="floating" controls loop poster="/videos/bvideo03.png">
-            <source src="/videos/Video003.mp4" type="video/mp4" />
+          <video class="floating" controls loop poster="./videos/bvideo03.png">
+            <source src="./videos/Video003.mp4" type="video/mp4" />
             Seu navegador não suporta vídeos HTML5.
           </video>
         </div>
@@ -210,8 +198,8 @@
       </div>
       <div data-aos="fade-up-left" class="card">
         <div class="image">
-          <video class="floating" controls loop poster="/videos/bvideo04.png">
-            <source src="/videos/Video005.mp4" type="video/mp4" />
+          <video class="floating" controls loop poster="./videos/bvideo04.png">
+            <source src="./videos/Video005.mp4" type="video/mp4" />
             Seu navegador não suporta vídeos HTML5.
           </video>
         </div>
@@ -223,8 +211,8 @@
       </div>
       <div data-aos="fade-up-left" class="card">
         <div class="image">
-          <video class="floating" controls loop poster="/videos/bvideo05.png">
-            <source src="/videos/Video004.mp4" type="video/mp4" />
+          <video class="floating" controls loop poster="./videos/bvideo05.png">
+            <source src="./videos/Video004.mp4" type="video/mp4" />
             Seu navegador não suporta vídeos HTML5.
           </video>
         </div>
@@ -240,8 +228,8 @@
       <!-- CARD 4 -->
       <div data-aos="fade-up-right" class="card">
         <div class="image">
-          <video class="floating" controls loop poster="/videos/bvideo06.png">
-            <source src="/videos/Video006.mp4" type="video/mp4" />
+          <video class="floating" controls loop poster="./videos/bvideo06.png">
+            <source src="./videos/Video006.mp4" type="video/mp4" />
             Seu navegador não suporta vídeos HTML5.
           </video>
         </div>
@@ -256,8 +244,8 @@
       </div>
       <div data-aos="fade-up-right" class="card">
         <div class="image">
-          <video class="floating" controls loop poster="/videos/bvideo07.png">
-            <source src="/videos/Video007.mp4" type="video/mp4" />
+          <video class="floating" controls loop poster="./videos/bvideo07.png">
+            <source src="./videos/Video007.mp4" type="video/mp4" />
             Seu navegador não suporta vídeos HTML5.
           </video>
         </div>
@@ -271,8 +259,8 @@
       </div>
       <div data-aos="fade-up-right" class="card">
         <div class="image">
-          <video class="floating" controls loop poster="/videos/bvideo08.png">
-            <source src="/videos/Video008.mp4" type="video/mp4" />
+          <video class="floating" controls loop poster="./videos/bvideo08.png">
+            <source src="./videos/Video008.mp4" type="video/mp4" />
             Seu navegador não suporta vídeos HTML5.
           </video>
         </div>
@@ -319,7 +307,7 @@
             </div>
 
             <div class="swiper-slide card">
-              <img src="/imagens/DaVinci.png" alt="DaVinci" style="width: 64px; height: 64px;">
+              <img src="./imagens/DaVinci.png" alt="DaVinci" style="width: 64px; height: 64px;">
               <span>DaVinci Resolve</span>
               <p>
                 Nele faço a correção de cor antes mesmo de começar a
@@ -391,7 +379,7 @@
               data-aos-easing="ease-in-sine"
               class="card two"
             >
-              <img src="/imagens/DaVinci.png" alt="DaVinci" style="width: 64px; height: 64px;">
+              <img src="./imagens/DaVinci.png" alt="DaVinci" style="width: 64px; height: 64px;">
               <span>DaVinci Resolve</span>
               <p>
                 Nele faço a correção de cor antes mesmo de começar a
@@ -475,10 +463,10 @@
             <footer>
   <div class="social-links" data-aos="fade-up">
   <a href="https://wa.me/5562986531443" target="_blank" rel="noopener noreferrer" class="floating">
-    <img src="/imagens/whatsapp.png" alt="WhatsApp" width="80" height="80" />
+    <img src="./imagens/whatsapp.png" alt="WhatsApp" width="80" height="80" />
   </a>
   <a href="https://instagram.com/lottin.films" target="_blank" rel="noopener noreferrer" class="floating">
-    <img src="/imagens/insta.png" alt="Instagram" width="80" height="80" />
+    <img src="./imagens/insta.png" alt="Instagram" width="80" height="80" />
   </a>
 </div>
 
@@ -509,7 +497,7 @@
     </a>
 
 
-    <script src="/js/particles.min.js"></script>
+    <script src="./js/particles.min.js"></script>
     <script>
       particlesJS({
         particles: {
